tests/unit/language/policy/errors/unknown_policy_rejected.arche
// `!name` must be a built-in (abort, undefined, zero) or a visible `policy` decl — an unknown name
// is E0099.
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "unknown policy\|E0099" %t.out
main :: proc() {
  a: [4]int;
  i := 9;
  x := a[i] !bogus; // no such policy -> E0099
}